--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -1,3 +1,12 @@
 .ziltag-base-page__head {
 	border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
+
+.ziltag-base-page__avatar {
+	float: right;
+	width: 30px;
+	height: auto;
+	margin: 12px 16px;
+	border-radius: 50%;
+	cursor: pointer;
+}
