--- a/src/component/Logo/index.css
+++ b/src/component/Logo/index.css
@@ -1,6 +1,7 @@
 .ziltag-logo {
+	display: inline-block;
+	width: 86px;
+	height: 27px;
 	margin: 12px 16px;
-  background: url(logo.png);
-  background-size: contain;
-  background-repeat: no-repeat;
+  background: url(logo.png) no-repeat;
 }
