--- a/src/component/AvatarMenu/index.css
+++ b/src/component/AvatarMenu/index.css
@@ -18,7 +18,7 @@
   position: relative;
   width: 86px;
   padding: 0;
-  border-radius: 2%;
+  border-radius: 2px;
   box-shadow: 0 0 5px #333;
 }
 
