fix ziltag_map position

--- a/src/component/ZiltagMap/index.css
+++ b/src/component/ZiltagMap/index.css
@@ -22,24 +22,25 @@
   color: white;
 }
 
+.ziltag-ziltag-map .ziltag-ziltag-map__src,
+.ziltag-ziltag-map__prompt,
+.ziltag-ziltag-map__container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
 .ziltag-ziltag-map .ziltag-ziltag-map__src {
-  position: relative;
   z-index: 0;
-  margin: 0 auto;
 }
 
 .ziltag-ziltag-map .ziltag-ziltag-map__prompt {
-  position: relative;
   z-index: 2;
-  top: -100%;
-  margin: 0 auto;
 }
 
 .ziltag-ziltag-map .ziltag-ziltag-map__container {
-  position: relative;
   z-index: 1;
-  top: -367px;
-  margin: 0 auto;
 }
 
 
