--- a/src/component/ZiltagMap/index.css
+++ b/src/component/ZiltagMap/index.css
@@ -58,3 +58,9 @@
 .ziltag-ziltag-map__container .ziltag-co-div {
   z-index: 3;
 }
+
+.ziltag-co-div .ziltag-ziltag-form {
+  width: 306px;
+  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
+  margin: 6px 0 6px 15px;
+}
