--- a/src/component/CoDiv/index.css
+++ b/src/component/CoDiv/index.css
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 60px;
   background: white;
+  opacity: .95;
   border-radius: 3px;
   box-shadow: 0 0 5px #333;
 }
