--- a/src/component/ZiltagMap/index.css
+++ b/src/component/ZiltagMap/index.css
@@ -59,7 +59,7 @@
   z-index: 3;
 }
 
-.ziltag-co-div .ziltag-ziltag-form {
+.ziltag-co-div .ziltag-ziltag-form, .ziltag-ziltag-map-dialog {
   width: 306px;
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   margin: 6px 0 6px 15px;
