--- a/src/component/ZiltagMap/index.css
+++ b/src/component/ZiltagMap/index.css
@@ -59,8 +59,14 @@
   z-index: 3;
 }
 
-.ziltag-co-div .ziltag-ziltag-form, .ziltag-ziltag-map-dialog {
+.ziltag-co-div .ziltag-ziltag-form,
+.ziltag-co-div .ziltag-ziltag-input,
+.ziltag-co-div .ziltag-ziltag-map-dialog {
   width: 306px;
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   margin: 6px 0 6px 15px;
+}
+
+.ziltag-co-div .ziltag-ziltag-input {
+  margin: 20px 0 20px 15px;
 }
