--- a/src/component/ZiltagInput/index.css
+++ b/src/component/ZiltagInput/index.css
@@ -1,15 +1,29 @@
-.ziltag-ziltag-input{
-  color: rgba(0, 0, 0, 0.26);
-  font-family: Roboto-Regular, sans-serif;
-  font-size: 12px;
+.ziltag-ziltag-input {
+  display: flex;
 }
-.ziltag-ziltag-input__input{
-  border-width: 0;
-}
-.ziltag-ziltag-input__input:focus{
+
+.ziltag-ziltag-input textarea {
+  width: 250px;
+  height: 16px;
+  padding: 0;
+  font-size: 13px;
+  color: rgba(0, 0, 0, .87);
+  border: 0;
   outline: 0;
+  resize: none;
 }
-.ziltag-ziltag-input__submit{
-  cursor: pointer;
+
+.ziltag-ziltag-input__post {
+  width: 50px;
   text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, .26);
+  border-left: 1px solid rgba(0, 0, 0, .26);
+  cursor: pointer;
+}
+
+.ziltag-ziltag-input__post--activated {
+  font-weight: 500;
+  color: rgba(0, 0, 0, .87);
+  border-left: 1px solid rgba(0, 0, 0, .87);
 }
