--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -1,4 +1,14 @@
+body {
+  margin: 0;
+  background: rgb(249, 249, 249);
+}
+
+.ziltag-base-page {
+  height: 100%;
+}
+
 .ziltag-base-page__head {
+  background: white;
   border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
 
@@ -29,10 +39,18 @@
   top: 47px;
 }
 
-.ziltag-base-page .ziltag-ziltag-map {
-  margin: 12px 18px 4px;
-}
-
 .ziltag-base-page .ziltag-base-page__href {
   margin: 0 18px;
+}
+
+.ziltag-base-page-main {
+  display: flex;
+}
+
+.ziltag-base-page-main__col0, .ziltag-base-page-main__col1 {
+  width: 50%;
+}
+
+.ziltag-base-page .ziltag-base-page-main {
+  margin: 16px;
 }
