--- a/src/component/AvatarMenu/index.css
+++ b/src/component/AvatarMenu/index.css
@@ -7,6 +7,7 @@
   list-style-type: none;
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   font-size: 12px;
+  background: white;
   cursor: pointer;
 }
 
