--- a/src/component/ZiltagInput/index.css
+++ b/src/component/ZiltagInput/index.css
@@ -6,6 +6,7 @@
   width: 250px;
   height: 16px;
   padding: 0;
+  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   font-size: 13px;
   color: rgba(0, 0, 0, .87);
   border: 0;
