--- a/src/component/ZiltagContent/index.css
+++ b/src/component/ZiltagContent/index.css
@@ -7,14 +7,13 @@
 }
 
 .ziltag-ziltag-content__text {
-  font-size: 14px;
-  line-height: 24px;
-}
-
-.ziltag-ziltag-content__text--editing {
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   font-size: 14px;
   line-height: 24px;
+  color: rgba(0, 0, 0, .87);
+}
+
+.ziltag-ziltag-content__text--editing {
   padding: 0;
   border: 0;
   outline: 0;
