--- a/src/component/ZiltagComment/index.css
+++ b/src/component/ZiltagComment/index.css
@@ -1,7 +1,7 @@
 .ziltag-ziltag-comment {
   display: flex;
   background: white;
-  padding: 15px 30px 0 17px;
+  padding: 15px 17px 0;
   border-radius: 3px;
 }
 
