--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -63,6 +63,7 @@
   height: 50%;
 }
 
-.ziltag-base-page-main__col1 .ziltag-ziltag-comment-input {
+.ziltag-base-page-main__col1 .ziltag-ziltag-comment-input,
+.ziltag-base-page-main__col1 .ziltag-pseudo-comment {
   margin-bottom: 10px;
 }
