add TODO for PseudoComment's style

--- a/src/component/PseudoComment/index.css
+++ b/src/component/PseudoComment/index.css
@@ -48,7 +48,7 @@
 }
 
 /*
-TODO: ZiltagForm on CoDiv and PseudoComment should use same layout style.
+TODO: ZiltagForm on CoDiv and PseudoComment should use unified layout style.
 */
 .ziltag-pseudo-comment .ziltag-ziltag-form nav {
   height: 100%;
