--- a/src/component/AvatarMenu/index.css
+++ b/src/component/AvatarMenu/index.css
@@ -1,4 +1,5 @@
 .ziltag-base-page__avatar-menu-item {
+  position: relative;
   display: flex;
   width: 100%;
   height: 36px;
@@ -11,7 +12,13 @@
   cursor: pointer;
 }
 
-.ziltag-base-page__avatar-menu-item:hover {
+.ziltag-base-page__avatar-menu-item:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, .12)
 }
 
