auto resize ziltag input

--- a/src/component/ZiltagCommentInput/index.css
+++ b/src/component/ZiltagCommentInput/index.css
@@ -28,6 +28,7 @@
 
 .ziltag-ziltag-comment-input__post {
   width: 70px;
+  height: 15px;
   text-align: center;
   font-size: 14px;
   color: rgba(0, 0, 0, .26);
