--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -60,6 +60,7 @@
 
 .ziltag-ziltag-page__op-right .ziltag-ziltag-page__close,
 .ziltag-ziltag-page__op-right, .ziltag-ziltag-page__share {
+  display: none;
   height: 50%;
 }
 
