--- a/src/component/ZiltagComment/index.css
+++ b/src/component/ZiltagComment/index.css
@@ -30,6 +30,7 @@
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   font-size: 14px;
   line-height: 20px;
+  white-space: pre-line;
   color: rgba(0, 0, 0, .87);
 }
 
