--- a/src/component/ZiltagContent/index.css
+++ b/src/component/ZiltagContent/index.css
@@ -10,6 +10,7 @@
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
   font-size: 14px;
   line-height: 24px;
+  white-space: pre-line;
   color: rgba(0, 0, 0, .87);
 }
 
