--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -4,7 +4,7 @@
 
 .ziltag-ziltag-map-page__ziltag {
   display: flex;
-  height: 120px;
+  height: 122px;
   background: white;
   border-radius: 3px;
   padding: 15px 17px 0;
@@ -36,8 +36,11 @@
 }
 
 .ziltag-ziltag-map-page__ziltag-content {
+  height: 100px;
   font-size: 14px;
   line-height: 20px;
+  word-break: break-all;
+  overflow: hidden;
 }
 
 .ziltag-ziltag-map-page .ziltag-ziltag-map-page__ziltag {
