--- a/src/component/ZiltagContent/index.css
+++ b/src/component/ZiltagContent/index.css
@@ -57,6 +57,10 @@
   bottom: 15px;
 }
 
+.ziltag-ziltag-content .ziltag-media-carousel {
+  margin-bottom: 25px;
+}
+
 .ziltag-ziltag-content__row .ziltag-ziltag-content__edit-operator {
   margin-right: 16px;
 }
