--- a/src/component/MediaCarousel/index.css
+++ b/src/component/MediaCarousel/index.css
@@ -1,9 +1,21 @@
 .ziltag-media-carousel {
+  position: relative;
+  width: 100%;
+  height: 238px;
   padding-right: 20%;
+  box-sizing: border-box;
 }
 
 .ziltag-media-carousel__youtube {
   width: 100%;
-  height: 238px;
+  height: 100%;
   border: 0;
+}
+
+.ziltag-media-carousel__mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: white;
+  opacity: .68;
 }
