--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -8,6 +8,7 @@
   background: white;
   border-radius: 3px;
   padding: 15px 17px 0;
+  text-decoration: none;
 }
 
 .ziltag-ziltag-map-page__ziltag:last-of-type {
@@ -39,8 +40,14 @@
   height: 100px;
   font-size: 14px;
   line-height: 20px;
+  color: rgba(0,0,0,.87);
   word-break: break-all;
   overflow: hidden;
+}
+
+.ziltag-ziltag-map-page__anchorify-text {
+  color: #1a0dab;
+  text-decoration: underline;
 }
 
 .ziltag-ziltag-map-page .ziltag-ziltag-map-page__ziltag {
