--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -20,6 +20,8 @@
 }
 
 .ziltag-ziltag-map-page__heading {
+  font-size: 34px;
+  font-weight: normal;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
