--- a/src/component/DropDownMenu/index.css
+++ b/src/component/DropDownMenu/index.css
@@ -42,7 +42,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .12)
+  background: rgba(0, 0, 0, .12);
+  pointer-events: none;
 }
 
 .ziltag-drop-down-menu hr {
