fix: avatar menu's position close #146

--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -41,8 +41,7 @@ a {
 }
 
 .ziltag-base-page .ziltag-base-page__avatar-menu {
-  position: absolute;
-  z-index: 1;
+  position: fixed;
   right: 16px;
   top: 47px;
 }
