--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -48,10 +48,13 @@ a {
 
 .ziltag-base-page-main {
   display: flex;
+  flex-flow: row wrap;
 }
 
 .ziltag-base-page-main__col0, .ziltag-base-page-main__col1 {
   width: 50%;
+  min-width: 300px;
+  flex-grow: 1;
 }
 
 .ziltag-base-page .ziltag-base-page-main {
