--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -53,8 +53,7 @@ a {
 
 .ziltag-base-page-main__col0, .ziltag-base-page-main__col1 {
   width: 50%;
-  min-width: 300px;
-  flex-grow: 1;
+  flex: 1 1 300px;
 }
 
 .ziltag-base-page .ziltag-base-page-main {
