fix: input[name='name']

--- a/src/component/ZiltagForm/index.css
+++ b/src/component/ZiltagForm/index.css
@@ -56,7 +56,7 @@
   font-size: 12px;
 }
 
-.ziltag-ziltag-form input[name='text'] {
+.ziltag-ziltag-form input[name='name'] {
   background: 0 50% url(name.png) no-repeat;
 }
 
