--- a/src/component/ZiltagCommentInput/index.css
+++ b/src/component/ZiltagCommentInput/index.css
@@ -23,7 +23,8 @@
 .ziltag-ziltag-comment-input__avatar {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  min-width: 40px;
+  min-height: 40px;
 }
 
 .ziltag-ziltag-comment-input__post {
