--- a/src/component/CoDiv/index.css
+++ b/src/component/CoDiv/index.css
@@ -1,6 +1,6 @@
 .ziltag-co-div {
   position: relative;
-  min-height: 60px;
+  line-height: 16px;
   background: white;
   opacity: .95;
   border-radius: 3px;
