--- a/src/component/DropDownMenu/index.css
+++ b/src/component/DropDownMenu/index.css
@@ -50,8 +50,15 @@
   margin: 0 6px;
 }
 
+.ziltag-drop-down-menu-item * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .ziltag-drop-down-menu-item a {
-  z-index: 1;
   color: black;
   text-decoration: none;
 }
