refactor: use numeric font-weight

--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -17,7 +17,7 @@
 
 .ziltag-ziltag-page__op-prompt {
   font-size: 12px;
-  font-weight: lighter;
+  font-weight: 300;
   color: rgba(0, 0, 0, .54);
 }
 
