--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -50,14 +50,29 @@
   text-decoration: underline;
 }
 
+.ziltag-ziltag-map-page__close {
+  width: 20px;
+  height: 20px;
+  background: top center url(close.png) no-repeat;
+  cursor: pointer;
+}
+
 .ziltag-ziltag-map-page .ziltag-ziltag-map-page__ziltag {
   margin-bottom: 14px;
 }
 
 .ziltag-ziltag-map-page .ziltag-ziltag-map-page__heading {
-  margin: 17px 0 14px;
+  position: relative;
+  margin: 0 0 14px;
+  padding-top: 17px;
 }
 
 .ziltag-ziltag-map-page__ziltag .ziltag-ziltag-map-page__ziltag-user-avatar {
   margin-right: 10px;
+}
+
+.ziltag-ziltag-map-page .ziltag-ziltag-map-page__close {
+  position: absolute;
+  top: 0;
+  right: 8px;
 }
