--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -1,3 +1,9 @@
+.ziltag-ziltag-map-page {
+  position: absolute;
+  background: rgb(249, 249, 249);
+  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
+}
+
 .ziltag-ziltag-map-page__ziltag {
   display: flex;
   height: 122px;
