--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -1,3 +1,9 @@
+.ziltag-ziltag-page {
+  position: absolute;
+  background: rgb(249, 249, 249);
+  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
+}
+
 .ziltag-ziltag-page__op {
   display: flex;
   height: 56px;
