--- a/src/page/ZiltagMapPage/index.css
+++ b/src/page/ZiltagMapPage/index.css
@@ -1,5 +1,7 @@
 .ziltag-ziltag-map-page {
   position: absolute;
+  width: 100%;
+  height: 100%;
   background: rgb(249, 249, 249);
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
 }
