--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -1,6 +1,7 @@
 .ziltag-ziltag-page {
   position: absolute;
   width: 100%;
+  height: 100%;
   background: rgb(249, 249, 249);
   font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
 }
