fix(ZiltagPage): hide comment, comment input and share on mobile

--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -92,9 +92,7 @@
   margin: 55px 0 20px;
 }
 
-.ziltag-base-page--mobile .ziltag-base-page__href,
-.ziltag-base-page--mobile .ziltag-ziltag-page__share,
-.ziltag-base-page--mobile .ziltag-ziltag-comment-input {
+.ziltag-base-page--mobile .ziltag-base-page__href {
   display: none;
 }
 
