--- a/src/page/ZiltagPage/index.css
+++ b/src/page/ZiltagPage/index.css
@@ -104,3 +104,7 @@
 .ziltag-ziltag-page--mobile .ziltag-ziltag-page__op {
   padding: 0 32px 0;
 }
+
+.ziltag-ziltag-page--mobile .ziltag-ziltag-content {
+  padding: 15px 32px;
+}
