--- a/src/component/PseudoComment/index.css
+++ b/src/component/PseudoComment/index.css
@@ -25,6 +25,10 @@
   color: rgb(238, 46, 36);
 }
 
+.ziltag-pseudo-comment__head {
+  font-size: 20px;
+}
+
 .ziltag-pseudo-comment__main .ziltag-pseudo-comment__text {
   margin-bottom: 4px;
 }
