--- a/src/component/ZiltagPreview/index.css
+++ b/src/component/ZiltagPreview/index.css
@@ -1,23 +1,16 @@
 .ziltag-ziltag-preview {
   position: relative;
+  width: 240px;
+  min-height: 60px;
+  padding: 12px;
   font-size: 12px;
-  color: rgba(0, 0, 0, .87);
+  line-height: 1.5;
+}
+
+.ziltag-ziltag-preview__author {
+  color: rgb(151, 151, 151);
 }
 
 .ziltag-ziltag-preview__content {
-  width: calc(100% - 38px - 14px);
-  height: 30px;
-  word-wrap: break-word;
-  overflow: hidden;
-}
-
-.ziltag-ziltag-preview__avatar {
-  width: 38px;
-  height: 38px;
-}
-
-.ziltag-ziltag-preview .ziltag-ziltag-preview__avatar {
-  position: absolute;
-  top: 0;
-  right: 0;
+  color: rgb(51, 51, 51);
 }
