--- a/src/component/ZiltagPreview/index.css
+++ b/src/component/ZiltagPreview/index.css
@@ -1,10 +1,11 @@
 .ziltag-ziltag-preview {
   position: relative;
-  width: 240px;
+  width: 264px;
   min-height: 60px;
   padding: 12px;
   font-size: 12px;
   line-height: 1.5;
+  box-sizing: border-box;
 }
 
 .ziltag-ziltag-preview__author {
