--- a/src/component/Ziltag/index.css
+++ b/src/component/Ziltag/index.css
@@ -7,8 +7,8 @@
 .ziltag-ziltag {
   width: var(--ziltag-diameter);
   height: var(--ziltag-diameter);
-  background: rgba(151, 151, 151, .9);
-  border: var(--ziltag-border) solid rgba(255, 255, 255, .9);
+  background: rgba(151, 151, 151, 1);
+  border: var(--ziltag-border) solid rgba(255, 255, 255, 1);
   border-radius: 50%;
   box-shadow: 0 6px 2px rgba(0, 0, 0, .1);
   box-sizing: border-box;
@@ -16,5 +16,5 @@
 }
 
 .ziltag-ziltag--activated {
-  background: rgba(238, 46, 36, .9);
+  background: rgba(238, 46, 36, 1);
 }
