--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -3,6 +3,8 @@
 }
 
 .ziltag-base-page__head {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 54px;
   background: white;
@@ -12,6 +14,10 @@
 .ziltag-base-page__avatar {
   width: 30px;
   height: 30px;
+  cursor: pointer;
+}
+
+.ziltag-base-page__head-login {
   cursor: pointer;
 }
 
@@ -31,12 +37,12 @@
   color: rgba(0, 0, 0, .87);
 }
 
-.ziltag-base-page .ziltag-base-page__avatar{
-  float: right;
-  margin: 12px 23px;
+.ziltag-base-page .ziltag-base-page__avatar, .ziltag-base-page__head-login {
+  position: absolute;
+  right: 24px;
 }
 
-.ziltag-base-page .ziltag-base-page__avatar-menu {
+.ziltag-base-page .ziltag-base-page__avatar-menu, .ziltag-base-page__auth-form {
   position: fixed;
   right: 16px;
   top: 47px;
