fix: fix login link's position
close #281

--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -38,7 +38,8 @@
 }
 
 .ziltag-base-page .ziltag-base-page__avatar, .ziltag-base-page__head-login {
-  position: absolute;
+  position: relative;
+  margin-left: auto;
   right: 24px;
 }
 
