fix: fix dialog's width
close #289

--- a/src/component/ZiltagMapDialog/index.css
+++ b/src/component/ZiltagMapDialog/index.css
@@ -5,7 +5,8 @@
 }
 
 .ziltag-ziltag-map-dialog__col0 {
-  width: 189px;
+  width: 127px;
+  text-align: justify;
 }
 
 .ziltag-ziltag-map-dialog__col1 {
